--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -1,24 +1,48 @@
-:root {
-    --bg-color: #0F103F;
-    --primary-color: #ffffff;
-    --accent-color: #9249F2;
-    --font-heading: 'Poppins', sans-serif;
-    --font-body: 'Inter', sans-serif;
+.contact-con {
+    margin-top: 6rem;
+    max-width: 1240px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+.status-container {
+    margin: 1rem 0 1rem 0;
 }
 
-/* Contact */
+@media (min-width: 30em) {
+    .status-container {
+      margin-top: 2rem;
+    }
+}
 
-#contact {
-    position: relative;
-    padding: 100px 50px; /* Match padding with other sections */
-    margin-top: 150px; /* Add space between sections */
-    overflow: visble; /* Ensure background elements stay inside */
+.status {
+    background-color: var(--faint-bg);
+    display: flex;
+    align-items: center; 
+    justify-content: center; 
+    text-align: center; 
+    border-radius: 0.375rem; 
+    font-size: 1.25rem; 
+    margin-right: 1.5rem;
+    margin-left: 1.5rem;
+}
+
+@media (min-width: 30em) {
+    .status{
+      padding: 0.5rem; 
+    }
+}
+
+.circle {
+    width: 1rem; 
+    height: 1rem; 
+    background-color: green;
+    border-radius: .5rem; 
+    margin-right: 1rem; 
+}
+
+.status-txt {
+    opacity: .80;
 }
 
 .contact-container {
@@ -31,7 +55,7 @@
     max-width: 900px; /* Limit the maximum width for consistency */    
     margin: 0 auto; /* Center horizontally */
     padding: 100px 90px; /* Internal spacing */
-    background: rgba(47, 47, 138, 0.6);
+    background: var(--faint-bg);
     backdrop-filter: blur(10px);
     border-radius: 30px;
     position: relative;;
@@ -40,29 +64,10 @@
 
 .girl1 {
     position: absolute;
-    top: -444px; /* Adjust for vertical alignment */
+    top: 200px; /* Adjust for vertical alignment */
     left: 30px; /* Adjust for horizontal alignment */
     width: 450px; /* Adjust size as needed */
     z-index: 1; /* Ensure it's above other elements */
-}
-
-.planet {
-    position: absolute;
-    top: 200px; /* Adjust to position the planet higher */
-    left: -150px; /* Move to the left */
-    width: 400px; /* Adjust size as needed */
-    height: auto;
-    opacity: 0.8; /* Slight transparency for better blending */
-    z-index: -1; /* Ensure it's behind other elements */
-}
-
-.circle4 {
-    position: absolute;
-    top: 100px; /* Adjust to position the circle lower */
-    right: -200px; /* Move to the right */
-    width: 800px; /* Adjust size as needed */
-    opacity: 0.7; /* Slight transparency for better blending */
-    z-index: -1; /* Ensure it's behind other elements */
 }
 
 .contact-content {
@@ -75,33 +80,14 @@
 }
 
 .contact-content p {
-    font-size: 17px;
+    font-size: 18px;
     font-weight: 400;
-    line-height: 1.6;
-    margin-bottom: 20px;
+    line-height: 1.4;
     margin-right: 50px;
     text-align: justify;
+    margin-top: 0;
 }
 
-.contact-links {
-    display: flex;
-    width: 260px;
-    height: 105px;
-    top: 260px;
-    left: -3px;
-    gap: 12px; /* Space between icons */
-}
-
-
-.contact-links a img {
-    width: 50px;
-    height: 50px;
-    transition: transform 0.3s ease;
-}
-
-.contact-links a img:hover {
-    transform: scale(1.2); /* Slight zoom effect on hover */
-}
 
 .contact-form {
     flex: 1; /* Takes up one part of the row */
@@ -122,7 +108,7 @@
     border: none;
     border-radius: 8px;
     background: rgba(255, 255, 255, 0.3);
-    color: var(--primary-color);
+    color: var(--text-color);
     box-shadow: 0px 10px 20px rgba(7, 7, 26, 0.15);
 }
 
