--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,17 @@
+/* Animation */
+@keyframes appear {
+    from {
+      opacity: 0;
+      transform: translateZ(-100px);
+      
+    }
+    to {
+      opacity: 1;
+      transform: translateZ(0px);
+    }
+  }
+
+
 * {
     margin: 2px;
     padding: 0;
@@ -445,6 +459,9 @@ header {
     justify-content: center; 
     align-items: center; 
     gap: 0.5rem; 
+    animation: appear linear;
+    animation-timeline: view();
+    animation-range: entry 0 cover 40%; 
 }
 
 .work-h2 {
@@ -696,6 +713,10 @@ header {
     width: 100%;
     overflow: hidden;
     background-color: var(--faint-bg);
+    animation: appear linear;
+    animation-timeline: view();
+    animation-range: entry 0 cover 40%; 
+    
 }
 
 .grid-card {
