--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,7 +54,7 @@ body, .main, footer, a, h1, h2, h3, h4, h5, h6 {
     height: 4px;
     background-color: #3bdc90; 
     border-bottom: solid 4px;
-    border-image: linear-gradient(90deg, #dc3b3e 10%, #ff8f00 28%, #ffe066 35%, #3bdc90 50%, #3b99dc , #d535c3 90%) 100;
+    border-image: linear-gradient(90deg, #6a0dad 10%, #8a2be2 28%, #4b0082 50%, #0000ff 72%, #4169e1 90%) 100;
 }
 
 /* -----Header styles ---------*/
