--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,43 @@
     }
   }
 
+  /* ----- LOADER ---------*/
+
+@keyframes matrix {
+    0% {
+      background-position: 0% 100%, 50% 100%, 100% 100%
+    }
+  
+    100% {
+      background-position: 0% 0%, 50% 0%, 100% 0%
+    }
+  }
+  
+.loader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: linear-gradient(#0000 calc(1*100%/6),#fff 0 calc(3*100%/6),#0000 0),
+                linear-gradient(#0000 calc(2*100%/6),#fff 0 calc(4*100%/6),#0000 0),
+                linear-gradient(#0000 calc(3*100%/6),#fff 0 calc(5*100%/6),#0000 0);
+    background-size: 10px 400%;
+    background-repeat: no-repeat;
+    animation: matrix 1s infinite linear;
+    transition: opacity 0.75s, visibility 0.75s;
+  }
+
+.loader--hidden {
+    opacity: 0;
+    visibility: hidden;
+}
+
+/* ----- LOADER ---------*/
+
 
 * {
     margin: 2px;
