--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -63,8 +63,8 @@ h3, h4, h5, h6 {
 
 .profile-img {
     border-radius: 0.75rem; 
-    width: 50%; 
-    min-height: 150px; 
+    max-width: 300px; 
+    max-height: 300px; 
     background: #0F103F;
     border-radius: 30px; 
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
