--- a/assets/css/cert.css
+++ b/assets/css/cert.css
@@ -9,8 +9,8 @@ body {
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 2rem;
     max-width: 900px;
-    margin-left: 32px;
-    margin-right: 32px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .certification {
