--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -189,8 +189,7 @@ textarea.contact-input ~ i {
 }
 
 .contact-buttons {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    display: flex;
     column-gap: 1rem;
     margin-top: 1rem;
     width: 100%;
@@ -213,33 +212,4 @@ textarea.contact-input ~ i {
 .btn:hover {
     background-color: #6f42c1;
     color: #fff;
-
-}
-
-.btn-upload{
-    position: relative;
-    background-color:  var(--faint-bg);
-    border-radius: 40px;
-    border: none;
-    cursor: pointer;
-    font-weight: 500;
-    font-size: 1rem;
-}
-
-.btn-upload span{
-    color: #fafafa87;
-}
-
-.btn-upload span:hover {
-    color: #fff;
-}
-
-.btn-upload input {
-    display: none;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    cursor: pointer;
-    opacity: 0;
 }
